# chip8_emulator

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.cpp  chip8.hpp  main.cpp
